# CBPA

./: README.md  backend.dockerfile  docker-compose.yml  main.py  pyproject.toml  startup.sh
app/: main.py
app/bot/: command_handler.py  runner.py
app/bot/controller/: create_user.py
app/bot/controller/expense/: transaction_controller.py
app/bot/controller/user/: user_controller.py
app/core/: config.py
app/crud/: base.py  currency.py  telegram_user.py  transaction.py  user.py
app/data_migrations/: 0001_currency_tabel_migration.py
app/db/: session.py
app/models/: __init__.py  base.py  currency.py  expense_tracker.py  user.py
app/nl_router/: enums.py  functions.py  nlu.py  router.py
app/nl_router/models/: base.py  gen_ai_model.py  local_model.py  openai_model.py
app/nl_router/prompts/: system.md
app/nl_router/tools/: gen_ai.py  openai.py
app/schemas/: telegram_user.py  user.py
app/test/: test_expense_tracker.py  test_local_model.py  test_open_ai_model.py
migrations/: env.py
migrations/versions/: 2e0402d28bfb_added_users_and_telegram_users_tables.py  67cd49dac240_add_type_to_transaction.py  8fbf0fded9f8_added_currency_model.py  ca5c5b99b2a2_added_transaction_model.py  df72601d16f6_added_user_and_telegramuser_models.py  eadb0c0c3b8b_add_is_deleted_to_transactions.py
